# color-classification

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
adapters/: __init__.py
adapters/clustering/: __init__.py  hdbscan_strategy.py  kmeans_sweep.py  preprocess.py
adapters/directus/: __init__.py
adapters/llm/: __init__.py  openrouter.py
adapters/mock/: __init__.py  file_color_sink.py  fixture_record_source.py  jsonl_color_source.py  local_image_store.py
adapters/r2/: __init__.py
cli/: __init__.py  eval.py  run_batch.py  search.py
config/: __init__.py  thresholds.py
core/: __init__.py  buckets.py  gemini.py  image_pipeline.py  models.py  name_analysis.py  reconcile.py  search.py  vision_analysis.py
fixtures/: README.md  eval_labels.json  records.json
ports/: __init__.py  clustering.py  color_sink.py  image_store.py  llm.py  record_source.py
scripts/: import_desktop_swatches.py
tests/: __init__.py  test_adapters_mock.py  test_buckets.py  test_clustering.py  test_eval.py  test_image_pipeline.py  test_models.py  test_name_analysis.py  test_reconcile.py  test_search.py  test_vision_analysis.py
webapp/: __init__.py  db.py  main.py
webapp/static/: app.js  index.html  style.css
