# Project metadata + dependency manifest. No build logic lives here.
#
# Dependencies are added per workstream as modules get implemented (see
# CLAUDE.md §14). Expected eventual deps, kept here as a checklist:
#   - pydantic                  -> core/models.py (schema + validation)
#   - google-genai              -> core/gemini.py (name analysis call)
#   - numpy / scikit-image      -> adapters/clustering (LAB conversion, ΔE)
#   - scikit-learn or hdbscan   -> adapters/clustering (pixel clustering)
#   - pillow                    -> image decode + downscale
#   - pytest                    -> tests/
#
# NOTE: `core/` must stay importable without the heavy CV deps — those belong
# to the clustering/image adapters, not the domain core (CLAUDE.md §10 conventions).

[project]
name = "color-classification"
version = "0.0.0"
description = "Standalone color enrichment (swatch name + image -> color buckets) + bucket-search demo, against a mocked data layer."
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
